# Developer-salary-prediction-ml-app

./: Dockerfile  README.md  docker-compose.yml  heroku.yml  pyproject.toml
app/: main.py  routes.py
app/dash/: data_exploration.py  ml_model.pkl  predictive_model.py  sample_dataset.py
app/templates/: base.html  index.html
app/templates/partials/: footer.html  navbar.html
