[tool.poetry]
name = "flask-dash-stackoverflow  "
version = "0.1.0"
description = "Integrate Plotly Dash into our Flask applications."
authors = ["vianney <selflearning0001@gmail.com>"]
maintainers = ["vianney <selflearning0001@gmail.com>"]
license = "MIT"
keywords = [
    "Flask",
    "Plotly",
    "Plotly Dash",
    "Data Science"
]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"
dash = "^2.0.0"
dash-bootstrap-components = "^1.0.0"
pandas = "^1.3.1"
scikit-learn = "^0.24.2"
Markdown = "^3.3.4"
python-dotenv = "^0.19.0"
Pygments = "^2.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
